# moai-beta

./: CMakeLists.txt
samples/basics/anim-basic/: main.lua
samples/basics/dynamic-reevaluation/: main.lua
src/: CMakeLists.txt
src/aku/: CMakeLists.txt
src/hosts/: CMakeLists.txt  FolderWatcher-mac.mm  GlutHost.cpp  GlutHostMain.cpp
src/hosts/WinHostExt/: FolderWatcher.cpp
src/moaicore/: CMakeLists.txt  MOAIBox2DWorld.cpp  MOAIImage-jpg.cpp
src/moaiext-iphone/: MOAIFacebookIOS.h  MOAIFacebookIOS.mm
src/uslscore/: CMakeLists.txt  USDeviceTime_posix.cpp
src/zipfs/: CMakeLists.txt
vs2010/moai/: moai.vcxproj
vs2010/moai-untz/: moai-untz.vcxproj
xcode/libmoai/libmoai.xcodeproj/: project.pbxproj
