add_library(moaicore STATIC
    MOAIAction.cpp
    MOAIAction.h
    MOAIActionMgr.cpp
    MOAIActionMgr.h
    MOAIAnim.cpp
    MOAIAnimCurve.cpp
    MOAIAnimCurve.h
    MOAIAnim.h
    MOAIAttrOp.h
    MOAIBitmapFontReader.cpp
    MOAIBitmapFontReader.h
    MOAIBitmapFontRipper.cpp
    MOAIBitmapFontRipper.h
    MOAIBlendMode.cpp
    MOAIBlendMode.h
    MOAIBlocker.cpp
    MOAIBlocker.h
    MOAIBox2DArbiter.cpp
    MOAIBox2DArbiter.h
    MOAIBox2DBody.cpp
    MOAIBox2DBody.h
    MOAIBox2DDebugDraw.cpp
    MOAIBox2DDebugDraw.h
    MOAIBox2DDistanceJoint.cpp
    MOAIBox2DDistanceJoint.h
    MOAIBox2DFixture.cpp
    MOAIBox2DFixture.h
    MOAIBox2DFrictionJoint.cpp
    MOAIBox2DFrictionJoint.h
    MOAIBox2DGearJoint.cpp
    MOAIBox2DGearJoint.h
    MOAIBox2DJoint.cpp
    MOAIBox2DJoint.h
    MOAIBox2DMouseJoint.cpp
    MOAIBox2DMouseJoint.h
    MOAIBox2DPrismaticJoint.cpp
    MOAIBox2DPrismaticJoint.h
    MOAIBox2DPulleyJoint.cpp
    MOAIBox2DPulleyJoint.h
    MOAIBox2DRevoluteJoint.cpp
    MOAIBox2DRevoluteJoint.h
    MOAIBox2DRopeJoint.cpp
    MOAIBox2DRopeJoint.h
    MOAIBox2DWeldJoint.cpp
    MOAIBox2DWeldJoint.h
    MOAIBox2DWheelJoint.cpp
    MOAIBox2DWheelJoint.h
    MOAIBox2DWorld.cpp
    MOAIBox2DWorld.h
    MOAIButtonSensor.cpp
    MOAIButtonSensor.h
    MOAICamera2D.cpp
    MOAICamera2D.h
    MOAICameraAnchor2D.cpp
    MOAICameraAnchor2D.h
    MOAICamera.cpp
    MOAICameraFitter2D.cpp
    MOAICameraFitter2D.h
    MOAICamera.h
    MOAICanary.cpp
    MOAICanary.h
    MOAICollisionShape.cpp
    MOAICollisionShape.h
    MOAIColor.cpp
    MOAIColor.h
    MOAICompassSensor.cpp
    MOAICompassSensor.h
    moaicore.cpp
    moaicore.h
    moaicore-pch.cpp
    MOAICoroutine.cpp
    MOAICoroutine.h
    MOAICpArbiter.cpp
    MOAICpArbiter.h
    MOAICpBody.cpp
    MOAICpBody.h
    MOAICpConstraint.cpp
    MOAICpConstraint.h
    MOAICp.cpp
    MOAICpDebugDraw.cpp
    MOAICpDebugDraw.h
    MOAICp.h
    MOAICpShape.cpp
    MOAICpShape.h
    MOAICpSpace.cpp
    MOAICpSpace.h
    MOAIDataBuffer.cpp
    MOAIDataBuffer.h
    MOAIDataIOAction.cpp
    MOAIDataIOAction.h
    MOAIDebugLines.cpp
    MOAIDebugLines.h
    MOAIDeck2D.cpp
    MOAIDeck2D.h
    MOAIDeck.cpp
    MOAIDeck.h
    MOAIDeckRemapper.cpp
    MOAIDeckRemapper.h
    MOAIDeserializer.cpp
    MOAIDeserializer.h
    MOAIDraw.cpp
    MOAIDraw.h
    MOAIEaseDriver.cpp
    MOAIEaseDriver.h
    MOAIEaseType.cpp
    MOAIEaseType.h
    MOAIEnvironment.cpp
    MOAIEnvironment.h
    MOAIEventSource.cpp
    MOAIEventSource.h
    MOAIFileSystem.cpp
    MOAIFileSystem.h
    MOAIFont.cpp
    MOAIFont.h
    MOAIFontReader.cpp
    MOAIFontReader.h
    MOAIFrameBuffer.cpp
    MOAIFrameBuffer.h
    MOAIFreeTypeFontReader.cpp
    MOAIFreeTypeFontReader.h
    MOAIGfxDevice.cpp
    MOAIGfxDevice.h
    MOAIGfxQuad2D.cpp
    MOAIGfxQuad2D.h
    MOAIGfxQuadDeck2D.cpp
    MOAIGfxQuadDeck2D.h
    MOAIGfxQuadListDeck2D.cpp
    MOAIGfxQuadListDeck2D.h
    MOAIGfxResource.cpp
    MOAIGfxResource.h
    MOAIGlobals.cpp
    MOAIGlobals.h
    MOAIGlyphCacheBase.cpp
    MOAIGlyphCacheBase.h
    MOAIGlyphCache.cpp
    MOAIGlyphCache.h
    MOAIGlyphCachePage.cpp
    MOAIGlyphCachePage.h
    MOAIGlyph.cpp
    MOAIGlyph.h
    MOAIGlyphSet.cpp
    MOAIGlyphSet.h
    MOAIGrid.cpp
    MOAIGrid.h
    MOAIGridPathGraph.cpp
    MOAIGridPathGraph.h
    MOAIGridSpace.cpp
    MOAIGridSpace.h
    MOAIHttpTaskBase.cpp
    MOAIHttpTaskBase.h
    MOAIHttpTaskCurl.cpp
    MOAIHttpTaskCurl.h
    MOAIHttpTaskNaCl.cpp
    MOAIHttpTaskNaCl.h
    MOAIImage.cpp
    MOAIImage.h
    MOAIImage-jpg.cpp
    MOAIImage-png.cpp
    MOAIImageTexture.cpp
    MOAIImageTexture.h
    MOAIIndexBuffer.cpp
    MOAIIndexBuffer.h
    MOAIInputDevice.cpp
    MOAIInputDevice.h
    MOAIInputMgr.cpp
    MOAIInputMgr.h
    MOAIJoystickSensor.cpp
    MOAIJoystickSensor.h
    MOAIJsonParser.cpp
    MOAIJsonParser.h
    MOAIKeyboardSensor.cpp
    MOAIKeyboardSensor.h
    MOAILayer2D.cpp
    MOAILayer2D.h
    MOAILayerBridge.cpp
    MOAILayerBridge.h
    MOAILayer.cpp
    MOAILayer.h
    MOAILayoutFrame.cpp
    MOAILayoutFrame.h
    MOAILineBrush.cpp
    MOAILineBrush.h
    MOAILocationSensor.cpp
    MOAILocationSensor.h
    MOAILogMessages.cpp
    MOAILogMessages.h
    MOAILogMgr.cpp
    MOAILogMgr.h
    MOAILua.h
    MOAILuaObject.cpp
    MOAILuaObject.h
    MOAILuaObject-impl.h
    MOAILuaRef.cpp
    MOAILuaRef.h
    MOAILuaRuntime.cpp
    MOAILuaRuntime.h
    MOAILuaSharedPtr.h
    MOAILuaState.cpp
    MOAILuaState.h
    MOAILuaStateHandle.cpp
    MOAILuaStateHandle.h
    MOAILuaState-impl.h
    MOAIMesh.cpp
    MOAIMesh.h
    MOAIMotionSensor.cpp
    MOAIMotionSensor.h
    MOAIMultiTexture.cpp
    MOAIMultiTexture.h
    MOAINode.cpp
    MOAINode.h
    MOAINodeMgr.cpp
    MOAINodeMgr.h
    MOAIObject.cpp
    MOAIObject.h
    MOAIParser.cpp
    MOAIParser.h
    MOAIParticleDistanceEmitter.cpp
    MOAIParticleDistanceEmitter.h
    MOAIParticleEmitter.cpp
    MOAIParticleEmitter.h
    MOAIParticleForce.cpp
    MOAIParticleForce.h
    MOAIParticle.h
    MOAIParticlePlugin.cpp
    MOAIParticlePlugin.h
    MOAIParticleScript.cpp
    MOAIParticleScript.h
    MOAIParticleState.cpp
    MOAIParticleState.h
    MOAIParticleSystem.cpp
    MOAIParticleSystem.h
    MOAIParticleTimedEmitter.cpp
    MOAIParticleTimedEmitter.h
    MOAIPartitionCell.cpp
    MOAIPartitionCell.h
    MOAIPartition.cpp
    MOAIPartition.h
    MOAIPartitionLevel.cpp
    MOAIPartitionLevel.h
    MOAIPartitionResultBuffer.cpp
    MOAIPartitionResultBuffer.h
    MOAIPartitionResultMgr.cpp
    MOAIPartitionResultMgr.h
    MOAIPathFinder.cpp
    MOAIPathFinder.h
    MOAIPathGraph.cpp
    MOAIPathGraph.h
    MOAIPathTerrainDeck.cpp
    MOAIPathTerrainDeck.h
    MOAIPointerSensor.cpp
    MOAIPointerSensor.h
    MOAIProp2D.cpp
    MOAIProp2D.h
    MOAIProp.cpp
    MOAIProp.h
    MOAIPvrHeader.h
    MOAIQuadBrush.cpp
    MOAIQuadBrush.h
    MOAIRenderable.cpp
    MOAIRenderable.h
    MOAIRenderMgr.cpp
    MOAIRenderMgr.h
    MOAIRtti.cpp
    MOAIRtti.h
    MOAIScriptDeck.cpp
    MOAIScriptDeck.h
    MOAIScriptNode.cpp
    MOAIScriptNode.h
    MOAISensor.cpp
    MOAISensor.h
    MOAISerializerBase.cpp
    MOAISerializerBase.h
    MOAISerializer.cpp
    MOAISerializer.h
    MOAIShader.cpp
    MOAIShader.h
    MOAIShaderMgr.cpp
    MOAIShaderMgr.h
    MOAISharedPtr.h
    MOAISim.cpp
    MOAISim.h
    MOAISpanList.h
    MOAIStaticGlyphCache.cpp
    MOAIStaticGlyphCache.h
    MOAIStretchPatch2D.cpp
    MOAIStretchPatch2D.h
    MOAISurfaceDeck2D.cpp
    MOAISurfaceDeck2D.h
    MOAISurfaceSampler2D.cpp
    MOAISurfaceSampler2D.h
    MOAITextBox.cpp
    MOAITextBox.h
    MOAITextDesigner.cpp
    MOAITextDesigner.h
    MOAITextStyle.cpp
    MOAITextStyle.h
    MOAITextStyler.cpp
    MOAITextStyler.h
    MOAITextureBase.cpp
    MOAITextureBase.h
    MOAITexture.cpp
    MOAITexture.h
    MOAITileDeck2D.cpp
    MOAITileDeck2D.h
    MOAITileFlags.cpp
    MOAITileFlags.h
    MOAITimer.cpp
    MOAITimer.h
    MOAITouchSensor.cpp
    MOAITouchSensor.h
    MOAITransform2D.cpp
    MOAITransform2D.h
    MOAITransformBase.cpp
    MOAITransformBase.h
    MOAITransform.cpp
    MOAITransform.h
    MOAIUrlMgrCurl.cpp
    MOAIUrlMgrCurl.h
    MOAIUrlMgrNaCl.cpp
    MOAIUrlMgrNaCl.h
    MOAIVertexBuffer.cpp
    MOAIVertexBuffer.h
    MOAIVertexFormat.cpp
    MOAIVertexFormat.h
    MOAIVertexFormatMgr.cpp
    MOAIVertexFormatMgr.h
    MOAIViewport.cpp
    MOAIViewport.h
    MOAIWeakPtr.h
    MOAIWheelSensor.cpp
    MOAIWheelSensor.h
    MOAIXmlParser.cpp
    MOAIXmlParser.h
    pch.h
    shaders/MOAIDeck2DShader-fsh.h
    shaders/MOAIDeck2DShader-vsh.h
    shaders/MOAIDeck2DTexOnlyShader-fsh.h
    shaders/MOAIDeck2DTexOnlyShader-vsh.h
    shaders/MOAIFontShader-fsh.h
    shaders/MOAIFontShader-vsh.h
    shaders/MOAILineShader-fsh.h
    shaders/MOAILineShader-vsh.h
    shaders/MOAIMeshShader-fsh.h
    shaders/MOAIMeshShader-vsh.h
)

target_link_libraries(moaicore
    Box2D
    chipmunk
    tinyxml
    jpeg
    png
    ${CURL_LIBRARIES}
    ${FREETYPE_LIBRARIES}
)
