add_library(uslscore STATIC
    pch.h
    STLArray.h
    STLIteration.h
    STLList.h
    STLMap.h
    STLSet.h
    STLString.cpp
    STLString.h
    USAccessors.h
    USAdapterInfo.h
    USAdapterInfo_posix.cpp
    USAffine2D.h
    USAffine3D.h
    USBase64Cipher.cpp
    USBase64Cipher.h
    USBinarySearch.h
    USBox.cpp
    USBox.h
    USByteStream.cpp
    USByteStream.h
    USCgt.cpp
    USCgt.h
    USCipher.cpp
    USCipher.h
    USCipherStream.cpp
    USCipherStream.h
    USColor.cpp
    USColor.h
    USCurve.cpp
    USCurve.h
    USData.cpp
    USData.h
    USDataIOTask.cpp
    USDataIOTask.h
    USDeflater.cpp
    USDeflater.h
    USDelegate.h
    USDeviceTime_apple.cpp
    USDeviceTime.h
    USDeviceTime_nacl.cpp
    USDeviceTime_posix.cpp
    USDirectoryItr.cpp
    USDirectoryItr.h
    USDistance.cpp
    USDistance.h
    USFactory.h
    USFilename.cpp
    USFilename.h
    USFileStream.cpp
    USFileStream.h
    USFileSys.cpp
    USFileSys.h
    USFloat.h
    USFrustum.cpp
    USFrustum.h
    USHexDump.cpp
    USHexDump.h
    USInflater.cpp
    USInflater.h
    USInterpolate.cpp
    USInterpolate.h
    USIntersect.cpp
    USIntersect.h
    USLeanArray.h
    USLeanList.h
    USLeanPool.h
    USLeanStack.h
    USLexStream.cpp
    USLexStream.h
    USList.h
    USLog.cpp
    USLog.h
    uslscore.h
    uslscore-pch.cpp
    USMathConsts.h
    USMatrix3x3.h
    USMatrix4x4.h
    USMatrix.h
    USMemStream.cpp
    USMemStream.h
    USMercator.cpp
    USMercator.h
    USMutex.cpp
    USMutex.h
    USMutex_posix.cpp
    USMutex_posix.h
    USParser.cpp
    USParser.h
    USPlane.cpp
    USPlane.h
    USPolar.cpp
    USPolar.h
    USPolygon2D.h
    USPolyScanner.h
    USPrism.cpp
    USPrism.h
    USQuadCoord.cpp
    USQuadCoord.h
    USQuad.cpp
    USQuad.h
    USRadixSort16.h
    USRadixSort32.h
    USRect.h
    USRhombus.cpp
    USRhombus.h
    USStream.cpp
    USStreamFormatter.cpp
    USStreamFormatter.h
    USStream.h
    USSurface2D.cpp
    USSurface2D.h
    USSyntaxNode.cpp
    USSyntaxNode.h
    USSyntaxScanner.cpp
    USSyntaxScanner.h
    USTask.cpp
    USTask.h
    USTaskThread.cpp
    USTaskThread.h
    USThread.cpp
    USThread.h
    USThread_posix.cpp
    USThread_posix.h
    USTrig.cpp
    USTrig.h
    USTypedPtr.cpp
    USTypedPtr.h
    USTypeID.h
    USUnion.h
    USUnique.h
    USUnique_linux.cpp
    USVec2D.h
    USVec3D.h
    USVec4D.h
    USXmlReader.cpp
    USXmlReader.h
    USZip.cpp
    USZipFile.cpp
    USZipFile.h
    USZip.h
)

target_link_libraries(uslscore
    ${LUA_LIBRARIES}
    ${ZLIB_LIBRARIES}
)
